--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=88cb82c9fb04d442bdfaa07065aa85a9
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:password@127.0.0.1:3306/restau_quai_antiq?serverVersion=mariadb-10.4.24&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/restau_quai_antiq?serverVersion=mariadb-10.4.28&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
