Add lexik_jwt_authentication Configure security.yaml

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,30 +13,45 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
-            provider: app_user_provider
-            #form_login:
-            #    login_path: security.login
-            #    check_path: security.login
+#       main:
+#           lazy: true
+#           provider: app_user_provider
+#           #form_login:
+#           #    login_path: security.login
+#           #    check_path: security.login
+#           json_login:
+#               login_path: api.login
+#               check_path: api.login
+#           logout:
+#               path: api.logout
+#           #    path: security.logout
+#
+#           # activate different ways to authenticate
+#           # https://symfony.com/doc/current/security.html#the-firewall
+#
+#           # https://symfony.com/doc/current/security/impersonating_user.html
+#           # switch_user: true
+        login:
+            pattern: ^/api/login$
+            stateless: true
             json_login:
-                login_path: api.login
-                check_path: api.login
-            logout:
-                path: api.logout
-            #    path: security.logout
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+                check_path: /api/login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
         # - { path: ^/profile, roles: ROLE_USER }
+        #- { path: ^/api/login, roles: PUBLIC_ACCESS }
+        #- { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
